# bumbledb

./: .gitignore  Cargo.toml  README.md  TODO.md  rust-toolchain.toml
crates/bumbledb/: Cargo.toml
crates/bumbledb-bench/: Cargo.toml
crates/bumbledb-bench/examples/: judgment_probe_order.rs
crates/bumbledb-bench/src/: boost.rs  calendar.rs  churn.rs  cli.rs  clockproxy.rs  closure.rs  compare.rs  conformance.rs  corpus.rs  corpus_gen.rs  crud.rs  devhonesty.rs  differential.rs  displaced.rs  driver.rs  duralane.rs  edb.rs  families.rs  fixture.rs  gen.rs  harness.rs  json.rs  lanes.rs  lawful.rs  lib.rs  lint.rs  main.rs  main_tests.rs  naive.rs  open.rs  open_tests.rs  poststate.rs  querygen.rs  report.rs  runner.rs  scenarios.rs  schema.rs  sqlite_run.rs  sqlmap.rs  storemode.rs  (+8 more)
crates/bumbledb-bench/src/calendar/: corpus.rs  corpus_gen.rs  families.rs  gen.rs  tests.rs
crates/bumbledb-bench/src/churn/: engines.rs  lanes.rs  ops.rs  probes.rs  report.rs  run.rs  tests.rs  verify_end.rs
crates/bumbledb-bench/src/cli/: help.rs  parse.rs  tests.rs
crates/bumbledb-bench/src/closure/: tests.rs
crates/bumbledb-bench/src/conformance/: judgment.rs  program.rs
crates/bumbledb-bench/src/corpus_gen/: corpus_digest.rs  irgen.rs  mandate.rs  opgen.rs  range_window.rs  rng.rs  row.rs  scale.rs  sizes.rs  tests.rs  theorygen.rs
crates/bumbledb-bench/src/crud/: corpus.rs  lanes.rs  ops.rs  render.rs  run.rs  tests.rs
crates/bumbledb-bench/src/devhonesty/: tests.rs
crates/bumbledb-bench/src/differential/: tests.rs
crates/bumbledb-bench/src/displaced/: tests.rs
crates/bumbledb-bench/src/driver/: bench.rs  churn_cmd.rs  corpus.rs  corpus_gen.rs  crud.rs  gen.rs  lawful.rs  merge.rs  read_family.rs  scenarios.rs  sweep_commit.rs  tests.rs  trace.rs  verify_store.rs  write_families.rs
crates/bumbledb-bench/src/families/: digest.rs  read.rs  render_queries_md.rs  tests.rs  write.rs
crates/bumbledb-bench/src/harness/: cold.rs  measure.rs  rotation.rs  stats.rs  tests.rs  traced.rs
crates/bumbledb-bench/src/job/: load.rs  mod.rs  queries.rs  schema.rs  sqlite.rs
crates/bumbledb-bench/src/lanes/: curves.rs  storage.rs  writes.rs
crates/bumbledb-bench/src/lawful/: corpus.rs  enforcement.rs  lanes.rs  load.rs  render.rs  run.rs  tests.rs
crates/bumbledb-bench/src/main/: config.rs  datasets.rs  render_json.rs  render_markdown.rs  result.rs  run.rs  sqlite.rs  timing.rs  tracing.rs  types.rs
crates/bumbledb-bench/src/naive/: differential.rs  query.rs  tests.rs  tuple.rs
crates/bumbledb-bench/src/open/: csv_readers.rs  imdb.rs  job_field_helpers.rs  lahman.rs  (+7 more)
crates/bumbledb-lmdb/: Cargo.toml
crates/bumbledb-lmdb/src/: allocation.rs  base_image.rs  base_image_tests.rs  benchmark.rs  colt.rs  colt_alloc_benchmarks.rs  colt_filter.rs  colt_schema.rs  colt_tests.rs  diagnostics.rs  environment.rs  error.rs  failpoints.rs  free_join.rs  hash_trie.rs  lib.rs  planner_stats.rs  query.rs  query_access.rs  query_image.rs  query_image_tests.rs  query_test_helpers.rs  query_tests.rs  sorted_trie.rs  storage.rs  storage_format.rs  storage_format_tests.rs  storage_schema.rs  storage_tests.rs  storage_v5.rs  storage_v5_codec.rs  storage_v5_meta.rs  storage_v5_tests.rs  tuple.rs  tuple_tests.rs  types.rs
crates/bumbledb-lmdb/tests/: public_exports.rs
crates/bumbledb-macros/: Cargo.toml
crates/bumbledb-macros/src/: lib.rs
crates/bumbledb-query/: Cargo.toml
crates/bumbledb-query-macros/: Cargo.toml
crates/bumbledb-query-macros/src/: lib.rs
crates/bumbledb-query/src/: lib.rs  order.rs
crates/bumbledb-query/tests/: compile_fail.rs  cookbook.rs  notation.rs  notation_corpus.rs  order.rs  readme.rs
crates/bumbledb-test-support/: Cargo.toml
crates/bumbledb-test-support/src/: assertions.rs  facts.rs  golden.rs  lib.rs  operations.rs  reference.rs  rows.rs  schemas.rs  sqlite.rs  workloads.rs
crates/bumbledb-test-support/tests/: concurrency.rs  crash_recovery.rs  failpoints.rs  golden_examples.rs  property_and_differential.rs  sqlite_comparison.rs  stress.rs  trybuild.rs
crates/bumbledb-theory/: Cargo.toml
crates/bumbledb-theory/src/: allen.rs  interval.rs  lib.rs  schema.rs  type_desc.rs  value.rs
crates/bumbledb-theory/tests/: spec.rs
crates/bumbledb/src/: allen.rs  alloc_counter.rs  api.rs  arena.rs  digest.rs  encoding.rs  error.rs  exec.rs  image.rs  interval.rs  ir.rs  lib.rs  obs.rs  plan.rs  schema.rs  storage.rs  value.rs  verify_store.rs
crates/bumbledb/tests/: adversarial_ir.rs  alloc_census.rs  alloc_gate.rs  api.rs  crash.rs  dyn_surface.rs  edge.rs  ephemeral.rs  exhume.rs  fixpoint_finalize_hunt.rs  keyed_get.rs  point_reads.rs  ramdisk_phase_r.rs  schema_compile_fail.rs  schema_macro.rs  schema_spec.rs  sysv_sem_rmid.rs  witness_stability.rs
fuzz/: Cargo.toml  README.md  SESSIONS.md
fuzz/corpus/: query.dict  theory.dict
fuzz/corpus/crash/: seed-000  seed-001  seed-002  seed-003  seed-004  seed-005  seed-006  seed-007
fuzz/corpus/ops/: seed-00  seed-01  seed-02  seed-03  seed-04  seed-05
fuzz/corpus/query/: seed-00  seed-01  seed-02  seed-03  seed-04  seed-06  seed-query-hostile-adv-mix-0  seed-query-hostile-adv-mix-1  seed-query-hostile-free-mix-0  seed-query-hostile-free-mix-2  seed-query-hostile-program-mix-2  seed-query-valid-mix-1  seed-query-valid-mix-2
fuzz/corpus/rewrites/: seed-05  seed-07
fuzz/corpus/theory/: seed-01  seed-02  seed-03  seed-04  seed-05  seed-16  seed-theory-adv-mix-0  seed-theory-adv-mix-2  seed-theory-free-mix-0  seed-theory-free-mix-1  seed-theory-free-mix-2
fuzz/fuzz_targets/: crash.rs  fuzz_datalog_parser.rs  fuzz_encoding_decode.rs  fuzz_query_executor_differential.rs  fuzz_storage_ops.rs  ops.rs  query.rs  rewrites.rs  theory.rs
fuzz/src/: crash.rs  irgen.rs  kill.rs  lib.rs  query.rs  rewrites.rs  seeds.rs  theorygen.rs  world.rs
fuzz/tests/: crash.rs  kill.rs  replay.rs  replay_query.rs
fuzz/trophies/ops/: multi-violation-citation-order
fuzz/trophies/theory/: genesis-debt-closed-parent-window
ts/crate/: Cargo.toml
ts/crate/src/: fingerprint_lock.rs  lib.rs  marshal.rs  tags.rs
(+2196 files in other folders)
