[workspace]
members = [
    "crates/bumbledb-core",
    "crates/bumbledb-lmdb",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"

[workspace.dependencies]
bumbledb-core = { path = "crates/bumbledb-core" }
blake3 = "1.8.2"
heed = { version = "0.22.1", default-features = false }
thiserror = "2.0.17"

[workspace.lints.rust]
unused = "deny"
unused_must_use = "deny"
unfulfilled_lint_expectations = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
dbg_macro = "deny"
undocumented_unsafe_blocks = "deny"
redundant_clone = "warn"
unnecessary_to_owned = "warn"
needless_collect = "warn"
large_stack_arrays = "warn"
box_collection = "warn"
vec_box = "warn"
