[workspace]
resolver = "2"
members = [
    "crates/bumbledb",
    "crates/bumbledb-bench",
    "crates/bumbledb-macros",
    "crates/bumbledb-query",
    "crates/bumbledb-theory",
]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
