[package]
name = "bumbledb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bumbledb = { path = "../crates/bumbledb" }
bumbledb-bench = { path = "../crates/bumbledb-bench" }

[[bin]]
name = "theory"
path = "fuzz_targets/theory.rs"
test = false
doc = false
bench = false

# Detached from the workspace on purpose (docs/prd-crucible/11-fuzz-theory.md):
# the workspace gates never build fuzz artifacts; `cargo fuzz` builds here.
[workspace]
