[package]
name = "bumbledb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# ground-off + fold-off: the rewrite passes' thread-local off switches,
# for the `rewrites` dual-pipeline differential. NOT a dual build: cargo
# refuses a second renamed dependency on the same package ("depends on
# crate `bumbledb v0.1.0` multiple times with different names"), so one
# build carries both features and the runner flips the runtime switches
# per pipeline (the crucible packet (git ecec1dc3), Results).
# crashpoint: the commit pipeline's named abort hooks for the `crash`
# target (the crucible packet (git ecec1dc3)). One build carries the
# feature for EVERY target here (cargo unifies features across this
# crate's one bumbledb) — safe because the hooks are inert without the
# BUMBLEDB_CRASHPOINT env var, which only the crash child ever sets.
bumbledb = { path = "../crates/bumbledb", features = ["ground-off", "fold-off", "crashpoint"] }
bumbledb-bench = { path = "../crates/bumbledb-bench" }
rusqlite = { version = "0.32", features = ["bundled"] }

[[bin]]
name = "theory"
path = "fuzz_targets/theory.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ops"
path = "fuzz_targets/ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "query"
path = "fuzz_targets/query.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rewrites"
path = "fuzz_targets/rewrites.rs"
test = false
doc = false
bench = false

[[bin]]
name = "crash"
path = "fuzz_targets/crash.rs"
test = false
doc = false
bench = false

# Detached from the workspace on purpose (the crucible packet (git ecec1dc3)):
# the workspace gates never build fuzz artifacts; `cargo fuzz` builds here.
[workspace]
