[package]
name = "bumbledb-bench"
version = "0.1.0"
edition = "2024"
publish = false

# Observability passthrough (docs/architecture/60-validation.md): the harness's alloc
# windows and trace capture need the engine built with instrumentation
# on. Off by default — plain timing runs measure the production build.
[features]
obs = ["bumbledb/trace", "bumbledb/alloc-counter"]

# The quarantined member (docs/architecture/00-product.md, Dependencies):
# rusqlite (bundled) and nothing else. Argument parsing, JSON, statistics,
# and randomness are hand-rolled.
[dependencies]
bumbledb = { path = "../bumbledb" }
rusqlite = { version = "0.32", features = ["bundled"] }

# The dual-run grounding differential (src/differential/tests/ground.rs) prepares each
# eliminable fixture with the rewrite on and off; the off switch is the
# engine's test-support `ground-off` feature — a dev-dependency feature,
# so the harness binaries build without it.
[dev-dependencies]
bumbledb = { path = "../bumbledb", features = ["ground-off"] }

[lints]
workspace = true
