[package]
name = "bumbledb-lmdb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bumbledb-core.workspace = true
blake3.workspace = true
heed.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
allocation-telemetry = []
test-failpoints = []

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true

[lints]
workspace = true
