# The `query!` proc-macro MECHANICS — packaging, not surface: hosts spell
# `bumbledb-query`, which re-exports this crate's one macro. A Rust
# proc-macro crate can export nothing but proc macros, so the host-facing
# surface lives in the plain-lib facade and only the machinery lives here.
# Zero foreign dependencies — the parser is hand-rolled over the token
# stream (`bumbledb-macros`' precedent).
[package]
name = "bumbledb-query-macros"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[lints]
workspace = true
