# The blessed Rust query sugar (docs/architecture/70-api.md § host-side
# sugar), quarantined on the bench-crate precedent: hosts may depend on
# this crate; nothing in the engine ever depends back. Zero foreign
# dependencies — the parser is hand-rolled over the token stream
# (`bumbledb-macros`' precedent), and the engine appears only as a
# dev-dependency of the round-trip tests.
[package]
name = "bumbledb-query"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dev-dependencies]
bumbledb = { path = "../bumbledb" }

[lints]
workspace = true
