# The blessed Rust HOST-SIDE QUERY SURFACE (docs/architecture/70-api.md
# § host-side sugar), quarantined on the bench-crate precedent: hosts may
# depend on this crate; nothing in the engine ever depends back. Zero
# foreign dependencies — the proc-macro mechanics live in
# `bumbledb-query-macros` (internal packaging, hand-rolled parser), this
# crate is the one name hosts spell, and the engine appears only as a
# dev-dependency of the round-trip tests.
[package]
name = "bumbledb-query"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bumbledb-query-macros = { path = "../bumbledb-query-macros" }

[dev-dependencies]
bumbledb = { path = "../bumbledb" }

[lints]
workspace = true
