[package]
name = "bumbledb-test-support"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bumbledb-core.workspace = true
bumbledb-lmdb = { workspace = true, features = ["test-failpoints"] }
proptest.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
trybuild.workspace = true
