[package]
name = "bumbledb"
version = "0.1.0"
edition = "2024"
publish = false

[features]
trace = []
# Test-support: global-allocator counting for the zero-warm-allocation
# gate. Never enabled in production builds.
alloc-counter = []
# Test-support: reaches the grounding's thread-local off switch
# (`plan/ground.rs`) from the bench crate's dual-run differential unit
# tests. Enabled only as a bench dev-dependency; no runtime mode ships.
ground-off = []
# Fuzz-oracle infrastructure: reaches the statically-empty fold's
# thread-local off switch (`ir/normalize/fold.rs`) from outside the
# engine. History, recorded honestly: deleted as dead configuration
# 2026-07-12 (936ede5 — nothing in-workspace consumed it), revived
# 2026-07-13 with a named consumer: the detached fuzz crate's `rewrites`
# dual-pipeline differential (the crucible packet (git ecec1dc3))
# — an external crate cannot reach `cfg(test)`. No runtime mode ships.
fold-off = []
# Fuzz-oracle infrastructure: the crashpoint hooks — the commit
# pipeline's named phase boundaries (`storage/commit.rs`, the table)
# consult `BUMBLEDB_CRASHPOINT` and abort the process on match, for the
# detached fuzz crate's `crash` target
# (the crucible packet (git ecec1dc3)). Off (the default) the hook macro
# expands to nothing; on, the hooks are still inert unless the
# environment variable is set. No runtime mode ships.
crashpoint = []
# Fuzz-oracle infrastructure: the copy-on-append column differential
# (`api/db/image_oracle.rs`) — the engine's served image of a relation
# compared facet-by-facet against a from-scratch build in one snapshot,
# for the detached fuzz crate's `ops` target (its sixth oracle,
# docs/prds/incremental-images/prd-I1-copy-on-append.md § coverage
# item 3(b)) — an external crate cannot reach `cfg(test)`, the fold-off
# precedent. No runtime mode ships.
image-oracle = []
# The PRD-C1 measurement twins (`twin-no-mem-init`, `twin-append`)
# lived here for one measurement session and were removed with their
# gravestones — `MDB_NOMEMINIT` measured NEUTRAL
# (`storage/env/open_env.rs` records the numbers), `MDB_APPEND` refuted
# structurally (`storage/commit/applier.rs: put_data` records the
# mechanism). No dead flag ships.

[dependencies]
blake3 = "1"
bumbledb-macros = { path = "../bumbledb-macros" }
# The theory vocabulary (values, intervals, the Allen mask algebra, schema
# descriptors, the SchemaSpec lowering) — re-exported wholesale: hosts
# depend on this one crate, never on bumbledb-theory directly
# (docs/architecture/70-api.md § the SchemaSpec bindings contract).
bumbledb-theory = { path = "../bumbledb-theory" }
heed = { version = "0.22", default-features = false } # no serde codecs: the engine reads raw bytes; the dependency law's serde grep stays empty
# The ephemeral kind's open-time block allocation (storage/env/open_env.rs:
# fcntl(F_PREALLOCATE) / posix_fallocate) — the capacity contract enforced
# uniformly on sparse filesystems. Already in the graph under heed's
# lmdb-master-sys; this adds no node.
libc = "0.2"

# On Apple platforms LMDB's default lock implementation is SysV semaphores,
# keyed by ftok(lock.mdb) — 16 bits of inode — so ANY other LMDB environment
# on the volume whose lockfile inode collides mod 2^16 shares the set, and
# removes it at close (semctl IPC_RMID): the open environment's next lock
# acquisition returns EINVAL (struck the production store twice, 2026-07-17;
# regression: tests/sysv_sem_rmid.rs). POSIX named semaphores are keyed by a
# full 64-bit (dev, ino) hash and survive sem_unlink in-process; their known
# cost — no robust-owner recovery when a lock holder dies — is void here:
# bumbledb.lock enforces one process per store, so after a crash the next
# opener always wins LMDB's exclusive lock and recreates the semaphores.
[target.'cfg(target_os = "macos")'.dependencies]
heed = { version = "0.22", default-features = false, features = ["posix-sem"] }

# The phase-R measurement harness (tests/ramdisk_phase_r.rs) opens scratch
# heed environments with the flags the engine forbids, to price them. The
# crate is already in the dependency set above — this adds no node to the
# graph; the bench crate cannot host the experiment (its quarantine is
# rusqlite and nothing else).
[dev-dependencies]
heed = { version = "0.22", default-features = false }

[lints]
workspace = true
