[package]
name = "bumbledb"
version = "0.1.0"
edition = "2024"
publish = false

[features]
trace = []
# Test-support: global-allocator counting for the zero-warm-allocation
# gate. Never enabled in production builds.
alloc-counter = []
# Test-support: reaches the grounding's thread-local off switch
# (`plan/ground.rs`) from the bench crate's dual-run differential unit
# tests. Enabled only as a bench dev-dependency; no runtime mode ships.
ground-off = []
# Test-support: the crashpoint hooks — the commit pipeline's named
# phase boundaries (`storage/commit.rs`, the table) consult
# `BUMBLEDB_CRASHPOINT` and abort the process on match. Its consumer
# (the detached fuzz crate's `crash` target) died with the fuzzing
# apparatus (the 2026-07-20 hard-delete ruling,
# docs/architecture/60-validation.md § the deletion record); the
# feature currently has no in-workspace consumer. Off (the default)
# the hook macro expands to nothing; on, the hooks are still inert
# unless the environment variable is set. No runtime mode ships.
crashpoint = []
# Test-support: the copy-on-append column differential
# (`api/db/image_oracle.rs`) — the engine's served image of a relation
# compared facet-by-facet against a from-scratch build in one snapshot
# (the retired I1 copy-on-append packet (git history) § coverage
# item 3(b)). Its consumer (the detached fuzz crate's `ops` target)
# died with the fuzzing apparatus (the 2026-07-20 hard-delete ruling,
# docs/architecture/60-validation.md § the deletion record); the
# feature currently has no in-workspace consumer. No runtime mode
# ships.
image-oracle = []
# The PRD-C1 measurement twins (`twin-no-mem-init`, `twin-append`)
# lived here for one measurement session and were removed with their
# gravestones — `MDB_NOMEMINIT` measured NEUTRAL
# (`storage/env/open_env.rs` records the numbers), `MDB_APPEND` refuted
# structurally (`storage/commit/applier.rs: put_data` records the
# mechanism). No dead flag ships.
# GRAVESTONE (cleanup-0.5.0 ruling 4,
# the retired U2 engine-kills packet (git history)): `lineage-off` — the
# PR #10 branch's image-cache advance-vs-evict A/B knob
# (`with_lineage_disabled`, the `evict_older_than` feature arm) and its
# Wave-M cold-lineage bench twin (`bumbledb-bench/src/writebench.rs`) —
# is ruled DEAD before ever merging here. The copy-on-append number is
# banked (OFF/ON = 2.54x, cold_containment_walk, commit 7ca120aa) and
# measurement twins die once their number is banked (the PRD-C1
# precedent above). The PR #10 merge DID carry the feature — the
# reconciliation executed this gravestone: the feature, the knob, the
# twin, and the twin's feature dep died in the same commit;
# `evict_older_than` itself stays reachable via `cfg(test)`.

[dependencies]
blake3 = "1"
bumbledb-macros = { path = "../bumbledb-macros" }
# The theory vocabulary (values, intervals, the Allen mask algebra, schema
# descriptors, the SchemaSpec lowering) — re-exported wholesale: hosts
# depend on this one crate, never on bumbledb-theory directly
# (docs/architecture/70-api.md § the SchemaSpec bindings contract).
bumbledb-theory = { path = "../bumbledb-theory" }
heed = { version = "0.22", default-features = false } # no serde codecs: the engine reads raw bytes; the dependency law's serde grep stays empty

# On Apple platforms LMDB's default lock implementation is SysV semaphores,
# keyed by ftok(lock.mdb) — 16 bits of inode — so ANY other LMDB environment
# on the volume whose lockfile inode collides mod 2^16 shares the set, and
# removes it at close (semctl IPC_RMID): the open environment's next lock
# acquisition returns EINVAL (struck the production store twice, 2026-07-17;
# regression: tests/sysv_sem_rmid.rs). POSIX named semaphores are keyed by a
# full 64-bit (dev, ino) hash and survive sem_unlink in-process; their known
# cost — no robust-owner recovery when a lock holder dies — is void here:
# bumbledb.lock enforces one process per store, so after a crash the next
# opener always wins LMDB's exclusive lock and recreates the semaphores.
[target.'cfg(target_os = "macos")'.dependencies]
heed = { version = "0.22", default-features = false, features = ["posix-sem"] }

# The phase-R measurement harness (tests/ramdisk_phase_r.rs) opens scratch
# heed environments with the flags the engine forbids, to price them. The
# crate is already in the dependency set above — this adds no node to the
# graph; the bench crate cannot host the experiment (its quarantine is
# rusqlite and nothing else).
[dev-dependencies]
heed = { version = "0.22", default-features = false }

[lints]
workspace = true
